# SwarmOps

./: HiveOps_Final_Documentation.md  HiveOps_Final_Research_Backed_Documentation.docx  IMPLEMENTATION_MVP.md  pyproject.toml
backend/: hiveops.db  pyproject.toml
backend/app/: database.py  main.py
backend/app/models/: schemas.py
backend/app/routes/: agents.py  auth.py  dashboard.py  issues.py  merge_requests.py  pipelines.py  projects.py  registry.py
backend/app/services/: auth.py  seed.py
docs/: DEMO.md  STARTUP_PHASES_PLAN.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx  StatusBadge.tsx
frontend/src/hooks/: useApi.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Agents.tsx  Board.tsx  Dashboard.tsx  IssueDetail.tsx  Issues.tsx  Login.tsx  MergeRequestDetail.tsx  MergeRequests.tsx  Packages.tsx  PipelineDetail.tsx  Pipelines.tsx  ProjectDetail.tsx  Projects.tsx  Registry.tsx  Security.tsx
hiveops/: __init__.py  agents.py  api.py  evolution.py  macog.py  meta.py  models.py  orchestrator.py  plans.py  roadmap.py
tests/: test_api.py  test_orchestrator.py
